k8sstatic/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statick8s-deployment
  labels:
    app: statick8s
  namespace: statick8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: statick8s
  template:
    metadata:
      labels:
        app: statick8s
    spec:
      containers:
      - name: statick8s
        image: 912664755496.dkr.ecr.us-east-2.amazonaws.com/statick8s:1
        ports:
        - containerPort: 8080
