k8sstatic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: statick8s-ingress
  namespace: statick8s
spec:
  rules:
  - host: statick8s.testing.com
    http:
      paths:
      - path: /statick8s-hello-world-1.0
        pathType: Prefix
        backend:
          service:
            name: statick8s-svc
            port:
              number: 80
